# rclone_ui

./: Dockerfile  README.md  build.sh  deploy.sh  docker-compose.yml  env.example  index.html  main.py  mongo_manager.js  package.json  rclone_manager.py  requirements.txt  run.py  startup.sh
backend/: Cargo.toml
backend/src/: handlers.rs  lib.rs  main.rs  rclone_api.rs
docker/: nginx.conf  startup.sh  supervisord.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/pages/: Dashboard.tsx  FileExplorer.tsx  Mounts.tsx  Remotes.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
